--- a/styles/albums.css
+++ b/styles/albums.css
@@ -43,22 +43,34 @@
   border: 1px solid var(--border-color);
 }
 
+.track-featuring {
+  font-size: .90rem;
+  color: var(--secondary-foreground);
+}
+
 .track-list>.track {
   padding: .5rem 1rem;
   display: flex;
+}
+
+.track, .track-featuring {
+  transition: color 250ms, background-color 250ms;
 }
 
 .track-list>.track:nth-child(even) {
   background-color: var(--background-accent);
 }
 
-.track-title {
-  flex: 1 1 auto;
+.track-list>.track:hover {
+  background-color: var(--primary);
 }
 
-.track-featuring {
-  font-size: .90rem;
-  color: var(--secondary-foreground);
+.track-list>.track:hover, .track-list>.track:hover .track-featuring {
+  color: var(--primary-foreground) !important;
+}
+
+.track-title {
+  flex: 1 1 auto;
 }
 
 .album-actions {
